fix: Android `toList` runtime issue (#2010)
Signed-off-by: Ivan Ivanov <ivanivanov.ii726@gmail.com>